src/app/components/students/students.component.scss
.sidebar {
  width: 400px;
}

.content {
  margin-bottom: 54px;
  width: calc(100% - 400px);
  overflow-x: hidden;
}

.students-table {
  height: calc(100% - 80px);
}

@media (max-width: 767px) {
  .sidebar {
    width: 0;
    transition: width 0.2s ease;

    &.open {
      width: 100%;
      position: absolute;
      right: 0;
      height: calc(100% - 54px);
    }
  }
}

